force-app/main/default/objects/Krow__Risk__c/Krow__Risk__c.object-meta.xml
<CustomObject>
    <label>Project Risk</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Risk ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>