force-app/main/default/objects/Krow__Risk__c/fields/Krow__Comments__c.field-meta.xml
<CustomField>
    <fullName>Krow__Comments__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>