force-app/main/default/objects/Krow__Risk__c/fields/Krow__Impact__c.field-meta.xml
<CustomField>
    <fullName>Krow__Impact__c</fullName>
    <label>Impact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. Very little impact on the project.</fullName>
            </value>
            <value>
                <fullName>2. Impact will have small change in the project outcome.</fullName>
            </value>
            <value>
                <fullName>3. Event will cause some impact to the project; project can be completed with minimal budget, schedule changes, etc.</fullName>
            </value>
            <value>
                <fullName>4. An event will have a major impact to the project; can complete project but may be over budget, schedule, etc.</fullName>
            </value>
            <value>
                <fullName>5. Very high impact including financial loss, personal injury, termination of contract, loss of client, etc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>