force-app/main/default/objects/Krow__Risk__c/fields/Krow__Likelihood__c.field-meta.xml
<CustomField>
    <fullName>Krow__Likelihood__c</fullName>
    <label>Likelihood</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1. This event is not very likely to occur.</fullName>
            </value>
            <value>
                <fullName>2. This event may occur.</fullName>
            </value>
            <value>
                <fullName>3. The chances of this event occurring is about 50%</fullName>
            </value>
            <value>
                <fullName>4. This event is likely to occur.</fullName>
            </value>
            <value>
                <fullName>5.This event is very likely to occur and mitigation plans should be in place.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>