force-app/main/default/objects/Krow__Risk__c/fields/Krow__Risk_Description__c.field-meta.xml
<CustomField>
    <fullName>Krow__Risk_Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>