force-app/main/default/objects/Krow__Risk__c/fields/Krow__Risk_ID__c.field-meta.xml
<CustomField>
    <fullName>Krow__Risk_ID__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <externalId>true</externalId>
    <label>Risk ID</label>
    <type>AutoNumber</type>
</CustomField>