force-app/main/default/objects/Krow__Risk__c/listViews/Krow__All.listView-meta.xml
<ListView>
    <fullName>Krow__All</fullName>
    <columns>Krow__Risk_ID__c</columns>
    <columns>NAME</columns>
    <columns>Krow__Risk_Description__c</columns>
    <columns>Krow__Project__c</columns>
    <columns>Krow__Likelihood__c</columns>
    <columns>Krow__Impact__c</columns>
    <columns>Krow__Risk_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>